--- a/Cloudents.Spitball/App_Themes/site.less
+++ b/Cloudents.Spitball/App_Themes/site.less
@@ -594,7 +594,7 @@ body {
                 -ms-grid-row: 1;
                 -ms-grid-column: 3;
                 .inlineGrid(0);
-                -ms-grid-columns: auto max-content max-content;
+                -ms-grid-columns: auto 100fr max-content;
                 grid-template-columns: auto max-content max-content;
                 /*-ms-align-items: center;*/
                 align-items: center;
@@ -804,7 +804,7 @@ body {
 
             .tutor-result {
                 .result;
-                height:104px;
+                height: 104px;
                 .result-image(@sap-green);
                 -ms-grid-columns: 88px 0.5em auto 0.5em 80px;
                 grid-template-columns: 88px 0.5em 100fr 0.5em 80px;
@@ -849,12 +849,77 @@ body {
                     -ms-grid-column-span: 6;
                     color: @brownish-grey;
                     font-size: 12px;
-                    div+div{
-                        margin-top:0.5em;
+
+                    div + div {
+                        margin-top: 0.5em;
                     }
+
                     .place {
                         font-weight: bold;
                     }
+                }
+            }
+
+            .jobs-result {
+                .result;
+                grid-template-columns: 50fr 0.5em 50fr;
+                -ms-grid-columns: 50fr 0.5em 50fr;
+                grid-template-rows: auto 0.5em 100fr 1em 20px 1em 20px;
+                -ms-grid-rows: auto 0.5em 100fr 1em 20px 1em 20px;
+                font-size: 14px;
+                color: @black;
+
+                .icon {
+                    margin-right: 0.5em;
+                }
+
+                .title {
+                    font-size: 14px;
+                    font-weight: bold;
+                    grid-row: 1;
+                    grid-column-start: 1;
+                    grid-column-end: 4;
+                    -ms-grid-row: 1;
+                    -ms-grid-column: 1;
+                    -ms-grid-column-span: 4;
+                }
+
+                .description {
+                    grid-row: 3;
+                    grid-column-start: 1;
+                    grid-column-end: 4;
+                    -ms-grid-row: 3;
+                    -ms-grid-column: 1;
+                    font-size: 14px;
+                    -ms-grid-column-span: 4;
+                }
+
+                .company {
+                    grid-row: 5;
+                    -ms-grid-row: 5;
+                    grid-column: 1;
+                    -ms-grid-column: 1;
+                }
+
+                .location {
+                    grid-row: 5;
+                    -ms-grid-row: 5;
+                    grid-column: 3;
+                    -ms-grid-column: 3;
+                }
+
+                .jobType {
+                    grid-row: 7;
+                    -ms-grid-row: 7;
+                    grid-column: 1;
+                    -ms-grid-column: 1;
+                }
+
+                .startTime {
+                    grid-row: 7;
+                    -ms-grid-row: 7;
+                    grid-column: 3;
+                    -ms-grid-column: 3;
                 }
             }
 
