--- a/Cloudents.Core.Spitball/Views/Home/Index.cshtml
+++ b/Cloudents.Core.Spitball/Views/Home/Index.cshtml
@@ -2,4 +2,8 @@
     Layout = "_Layout";
 }
 
-<h2>Hello world</h2>
+<div id='app-root'>Loading...</div>
+
+@section scripts {
+    <script src="~/dist/main.js" asp-append-version="true"></script>
+}
