--- a/Cloudents.Core.Spitball/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Core.Spitball/Views/Shared/_Layout.cshtml
@@ -4,29 +4,18 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <environment include="Development">
-        <link href="~/css/site.css" rel="stylesheet" />
-    </environment>
-    <environment names="Staing,Production">
-        <link href="~/css/site.min.css" rel="stylesheet" asp-append-version="true" />
+    <base href="~/" />
+    <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    <environment exclude="Development">
+        <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true" />
     </environment>
         @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
 <div>
     @RenderBody()
-</div>    
-<environment names="Development">
-    <script src="~/lib/angular/angular.js" defer></script>
-    <script src="~/scripts/app.js" defer></script>
-    <script src="~/scripts/initAngular.js" defer></script>
-</environment>
-<environment names="Staing,Production">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"
-            asp-fallback-src="~/lib/angular/angular.js"
-            asp-fallback-test="window.angular" defer="true">
-    </script>
-    <script src="~/scripts/site.min.js" asp-append-version="true" defer></script>
-</environment>
+</div>  
+<script src="~/dist/vendor.js" asp-append-version="true"></script>
+@RenderSection("scripts", required: false)
 </body>
 </html>
