--- a/Cloudents.Core.Spitball/Views/_ViewImports.cshtml
+++ b/Cloudents.Core.Spitball/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@using Cloudents.Core.Spitball
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Microsoft.AspNetCore.SpaServices
