add the win money

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
@@ -26,7 +26,8 @@
 			<a class="header-nav-link hover-color about-link about-header-link" href="@Url.RouteUrl("Alex_ABOUT")">About Us</a>
 			<a class="header-nav-link hover-color faq-link faq-header-link" href="@Url.RouteUrl("Alex_FAQ")">FAQ</a>
 			<a class="header-nav-link hover-color tos-link tos-header-link" href="@Url.RouteUrl("Alex_TOS")">Terms</a>
-			<a class="header-nav-link hover-color privacy-link privacy-header-link" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
+            <a class="header-nav-link hover-color privacy-link privacy-header-link" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
+			<a class="header-nav-link hover-color money-link privacy-header-link" href="@Url.RouteUrl("Alex_MONEY")">Win Money</a>
 		</div>
 		<a class="menu">menu</a>
 	</header>
@@ -34,7 +35,8 @@
 		<a class="mobile-nav-link js-ga-track about-link" data-ga-label="About" href="@Url.RouteUrl("Alex_ABOUT")">About Us</a>
 		<a class="mobile-nav-link js-ga-track faq-link" data-ga-label="FAQ" href="@Url.RouteUrl("Alex_FAQ")">FAQ</a>
 		<a class="mobile-nav-link js-ga-track tos-link" data-ga-label="TOS" href="@Url.RouteUrl("Alex_TOS")">Terms</a>
-		<a class="mobile-nav-link js-ga-track privacy-link" data-ga-label="PRIVACY" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
+        <a class="mobile-nav-link js-ga-track privacy-link" data-ga-label="PRIVACY" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
+		<a class="mobile-nav-link js-ga-track money-link" data-ga-label="MONEY" href="@Url.RouteUrl("Alex_MONEY")">Win Money</a>
 	</nav>
 </div>
 
