--- a/Zbang.Cloudents.Mvc4WebRole/Views/Alex/_StaticPageHeader.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Alex/_StaticPageHeader.cshtml
@@ -8,7 +8,8 @@
 			<a class="header-nav-link js-ga-track fader-link about-link" href="@Url.RouteUrl("Alex_ABOUT")">About Us</a>
 			<a class="header-nav-link js-ga-track fader-link faq-link" href="@Url.RouteUrl("Alex_FAQ")">FAQ</a>
 			<a class="header-nav-link js-ga-track fader-link tos-link" href="@Url.RouteUrl("Alex_TOS")">Terms</a>
-			<a class="header-nav-link js-ga-track fader-link privacy-link" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
+            <a class="header-nav-link js-ga-track fader-link privacy-link" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
+			<a class="header-nav-link js-ga-track fader-link money-link" href="@Url.RouteUrl("Alex_MONEY")">Win Money</a>
 		</div>
 		<a class="menu">menu</a>
 	</header>
@@ -16,6 +17,7 @@
 		<a class="mobile-nav-link js-ga-track about-link" data-ga-label="About" href="@Url.RouteUrl("Alex_ABOUT")">About Us</a>
 		<a class="mobile-nav-link js-ga-track faq-link" data-ga-label="FAQ" href="@Url.RouteUrl("Alex_FAQ")">FAQ</a>
 		<a class="mobile-nav-link js-ga-track tos-link" data-ga-label="TOS" href="@Url.RouteUrl("Alex_TOS")">Terms</a>
-		<a class="mobile-nav-link js-ga-track privacy-link" data-ga-label="PRIVACY" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
+        <a class="mobile-nav-link js-ga-track privacy-link" data-ga-label="PRIVACY" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
+		<a class="mobile-nav-link js-ga-track money-link" data-ga-label="PRIVACY" href="@Url.RouteUrl("Alex_MONEY")">Win Money</a>
 	</nav>
 </div>
