--- a/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.rtl.css
@@ -738,10 +738,19 @@ h6 {
 	.hover-fill:hover polygon {
 		fill: rgb(2, 109, 148);
 	}
+.money-link {
+    color: #ebbc18!important;
+    font-weight:bold;
+}
+.money-page.internal-page .header-nav-link.money-link,
+.internal-page .header-nav-link.money-link:hover {
+    background: #ebbc18;
+    color: white !important;
+}
 
 .hover-color-static:hover,
 .hover-fill-static:hover {
-	color: #689742;
+    color: #689742;
 }
 
 .hover-color-static:hover path,
@@ -1900,8 +1909,11 @@ h6 {
     .internal-page .main p, .internal-page .main div {
         font-size: 18px;
         line-height: 25px;
-        color: #586971;
+        color: white;
     }
+.faq-page.internal-page .main p, .faq-page.internal-page .main div {
+    color: #586971;
+}
 
     .internal-page.about-page .main div {
         color: white;
@@ -2123,8 +2135,8 @@ h6 {
         overflow: hidden;
         z-index: 1;
         opacity: 0;
-        top: 44px;
-        position: relative;
+        top: 50px;
+        position: fixed;
         -ms-transform: translateY(-100%);
         transform: translateY(-100%);
         -webkit-transform: translateY(-100%);
@@ -2727,6 +2739,7 @@ h6 {
         .page-content {
             right: auto !important;
             padding: 15px !important;
+            max-width:100vw!important;
         }
     }
 
@@ -3335,12 +3348,14 @@ h6 {
         display: none;
     }
 
-    .internal-page .page-content {
-        max-width: 650px;
-        margin: 15px auto 0 auto;
-        padding: 5px 5px 25px 25px;
-        font-family: sans-serif;
-    }
+.internal-page .page-content {
+    max-width: 50vw;
+    margin: 15px auto 0 auto;
+    padding: 5px 5px 25px 25px;
+    font-family: sans-serif;
+    position: absolute;
+    right: calc(50vw - 325px);
+}
 
     .internal-page h1 {
         line-height: inherit;
@@ -3436,22 +3451,19 @@ h6 {
         position: absolute;
     }
 
-    .about-page .page-content {
-        position: absolute;
-        right: 33%;
-        max-width: 550px;
-    }
+/*.about-page .page-content {
+    max-width: 550px;
+    left: calc(50vw - 225px);
+}*/
 
     .page-content.privacy *, .page-content.terms * {
         color: white !important;
         font-family: sans-serif;
     }
 
-    .privacy-page .page-content, .tos-page .page-content {
-        position: absolute;
-        right: 33%;
-        max-width: 550px;
-    }
+/*.privacy-page .page-content, .tos-page .page-content {
+    left: calc(50vw - 225px);
+}*/
 
     .internal-page h1 {
         margin-bottom: 14px;
