--- a/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.rtl.css
@@ -3354,7 +3354,7 @@ h6 {
     padding: 5px 5px 25px 25px;
     font-family: sans-serif;
     position: absolute;
-    right: calc(50vw - 325px);
+    right: 25vw;
 }
 
     .internal-page h1 {
