--- a/Cloudents.Core.Spitball/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Core.Spitball/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <base href="~/" />
-    <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    @*<link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
     <environment exclude="Development">
         <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true" />
-    </environment>
+    </environment>*@
         @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
