--- a/Cloudents.Core.Spitball/ClientApp/components/app/app.vue.html
+++ b/Cloudents.Core.Spitball/ClientApp/components/app/app.vue.html
@@ -1,13 +1,9 @@
 <template>
-    <div id='app-root' class="container-fluid">
-        <div class="row">
-            <div class="col-sm-3">
+    <div id="app-root">
+            <!--<div class="col-sm-3">
                 <menu-component />
-            </div>
-            <div class="col-sm-9">
-                <router-view></router-view>
-            </div>
-        </div>
+            </div>-->
+            <router-view></router-view>
     </div>
 </template>
 
