--- a/Cloudents.Core.Spitball/ClientApp/components/home/home.vue.html
+++ b/Cloudents.Core.Spitball/ClientApp/components/home/home.vue.html
@@ -1,5 +1,5 @@
 <template>
-    <div>
+    <!--<div>
         <h1>Hello, world!</h1>
         <p>Welcome to your new single-page application, built with:</p>
         <ul>
@@ -15,5 +15,12 @@
             <li><strong>Hot module replacement</strong>. In development mode, you don't even need to reload the page after making most changes. Within seconds of saving changes to files, your Vue app will be rebuilt and a new instance injected is into the page.</li>
             <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and the <code>webpack</code> build tool produces minified static CSS and JavaScript files.</li>
         </ul>
-    </div>
+    </div>-->
+    
+    <form v-on:submit.prevent="search">
+        <input v-model.trim="msg" />
+        <input type="submit" value="search" />
+    </form>
 </template>
+
+<script src="./home.ts"></script>
