remove type script and vendor

--- a/Cloudents.Core.Spitball/ClientApp/components/sections/aside/navbar.vue.html
+++ b/Cloudents.Core.Spitball/ClientApp/components/sections/aside/navbar.vue.html
@@ -6,7 +6,7 @@
             <li @click="changeSection('ask')" v-class="{'selected':(sec=='ask')}">
                 <div class="ask">
                 <img src="../header/Images/normal-logo.svg" />
-                    <!--<svg v-svg="icons-ask" class="icon-ask"></svg>-->
+                    <svg v-svg="icons-ask" class="icon-ask"></svg>
                     <svg class="icon icon-ask">
                         <use xlink:href="../Images/icons.svg#icon-ask"></use>
                     </svg>
@@ -109,4 +109,4 @@
     </aside>
 </template>
 <style src="./navbar.less" lang="less"></style>
-<script src="./navbar.ts"></script>
+<!--<script src="./navbar.js"></script>-->
