--- a/Cloudents.Web/ClientApp/components/app/app.vue.html
+++ b/Cloudents.Web/ClientApp/components/app/app.vue.html
@@ -1,16 +1,6 @@
 ﻿<template>
-    <div id="app-root">
-        <!--{{msg}}-->
-        <!--<div class="col-sm-3">
-            <menu-component/>
-        </div>-->
+    <div>
+        <div>s</div>
         <router-view></router-view>
-        
-        <!--<form v-on:submit.prevent="search">
-            <input v-model.trim="msg" />
-            <input type="submit" value="search" />
-        </form>-->
     </div>
 </template>
-
-<!--<script src="./app.js"></script>-->
