Starting implement LuisAi

--- a/Cloudents.Web/ClientApp/components/home/home.vue.html
+++ b/Cloudents.Web/ClientApp/components/home/home.vue.html
@@ -1,8 +1,12 @@
 ﻿<template>
-    <form v-on:submit.prevent="search">
-        <input v-model.trim="msg"/>
-        <input type="submit" value="search"/>
-    </form>
+    <div>
+        <form v-on:submit.prevent="search">
+            <input v-model.trim="msg" />
+            <input type="submit" value="search" />
+        </form>
+
+        <div>{{result}}</div>
+    </div>
 </template>
 
 <script src="./home.js"></script>
