--- a/Cloudents.Web/Views/_ViewImports.cshtml
+++ b/Cloudents.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Cloudents.Web2
+﻿@using Cloudents.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.SpaServices
