--- a/Cloudents.Web/ClientApp/components/general/vertical-collection.less
+++ b/Cloudents.Web/ClientApp/components/general/vertical-collection.less
@@ -1,6 +1,11 @@
-﻿ul {
-    svg {
-        fill:#ff0000;
-        background:#00ffff;
-    }
+﻿
+.round-icon {
+    width: 38px;
+    height: 38px;
+    border-radius:50%;
+    background-color:red;
+}
+
+.selected {
+    border:3px solid green;
 }
