--- a/Cloudents.Web/ClientApp/components/sections/sections.less
+++ b/Cloudents.Web/ClientApp/components/sections/sections.less
@@ -268,15 +268,14 @@ section {
     }
 
     .displayGrid(0);
-    grid-template-areas: "aside content";
     grid-template-columns: auto auto;
     -ms-grid-columns: auto auto;
     /*background: yellow;*/
-    h1 {
+    /*h1 {
         color: @marine;
         font-size: 20px;
         text-align: center;
-    }
+    }*/
 
     @media @tablet_641,@desktop_1366 {
         grid-template-columns: 220px auto;
