--- a/Cloudents.Web/ClientApp/components/sections/aside/navbar.less
+++ b/Cloudents.Web/ClientApp/components/sections/aside/navbar.less
@@ -6,6 +6,10 @@
     position: relative;
 }
 aside {
+    .router-link-exact-active {
+        background: yellow;
+    }
+
     -ms-grid-column: 1;
     grid-column: 1;
     /*grid-area: aside;*/
