--- a/Cloudents.Web/ClientApp/components/sections/sections.less
+++ b/Cloudents.Web/ClientApp/components/sections/sections.less
@@ -39,6 +39,7 @@
 @steel-grey: #888b8e;
 @apple-green: #7ed321;
 @carmin: #a40014;
+@ask: #0455a8; 
 .displayInlineFlex() {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
